# desktop

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  postcss.config.js  sitemap.xml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: desktop-build.yml  docs.yml  sidecar-ci.yml  winget-submit.yml
api/: index.html
architecture/: index.html
changelog/: index.html
docs/: api.md  architecture.md  changelog.md  index.md  installer.md
installer/: index.html
search/: search_index.json
sidecar/: README.md  pyproject.toml  qualdatan_sidecar.spec  sidecar_entry.py
sidecar/contract/: openapi.json
sidecar/src/qualdatan_sidecar/: __init__.py  __main__.py  bootstrap.py  deps.py  events_bridge.py
sidecar/src/qualdatan_sidecar/contract/: __init__.py  app.py  auth.py  dump_openapi.py  endpoints.py  models.py
sidecar/src/qualdatan_sidecar/contract/routers/: __init__.py  codebook.py  export.py  health.py  plugins.py  projects.py  runs.py
sidecar/tests/: test_auth_query.py  test_bootstrap.py  test_codebook.py  test_contract.py  test_export.py  test_plugins.py  test_projects.py  test_runs.py
src/: App.tsx  app.d.ts  app.html  index.css  main.tsx  router.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/installer/: installer.nsi
src-tauri/src/: main.rs  sidecar.rs
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  table.tsx
src/lib/: queryClient.ts  queryHelpers.ts  sidecar.gen.ts  sidecar.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/plugins/: +page.svelte
src/routes/projects/[projectId]/: +page.svelte
src/routes/projects/[projectId]/codebook/: +page.svelte
src/routes/projects/[projectId]/runs/new/: +page.svelte
src/routes/runs/[runId]/: +page.svelte
src/routes/runs/[runId]/export/: +page.svelte
src/routes/settings/: +page.svelte
src/views/: CodebookEditorView.tsx  ExportView.tsx  PluginBrowserView.tsx  ProjectDetailView.tsx  ProjectListView.tsx  RunMonitorView.tsx  RunWizardView.tsx  SettingsView.tsx
winget/: Qualdatan.Desktop.installer.yaml  Qualdatan.Desktop.locale.en-US.yaml  Qualdatan.Desktop.yaml
