[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualdatan-sidecar"
version = "0.1.0"
description = "FastAPI sidecar for the Qualdatan desktop app; exposes qualdatan-core and qualdatan-plugins over a local HTTP API."
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "Friedrich Schroedter" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Private :: Do Not Upload",
]

dependencies = [
    "qualdatan-core>=0.1,<0.2",
    "qualdatan-plugins>=0.1,<0.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pyinstaller>=6.8",
]

[project.scripts]
qualdatan-sidecar = "qualdatan_sidecar.app:main"

[tool.setuptools.packages.find]
where = ["src"]
