[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualdatan-sidecar"
version = "0.1.0"
description = "FastAPI sidecar for the Qualdatan desktop app; exposes qualdatan-core and qualdatan-plugins over a local HTTP API."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "Friedrich Schroedter" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Private :: Do Not Upload",
]

dependencies = [
    "qualdatan-core",
    "qualdatan-plugins",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "pyinstaller>=6.8",
]

[project.scripts]
qualdatan-sidecar-dump-openapi = "qualdatan_sidecar.contract.dump_openapi:main"

# ---------------------------------------------------------------------------
# uv sources
# ---------------------------------------------------------------------------
# Diese Member-pyproject deklariert *keine* [tool.uv.sources] fuer
# qualdatan-core/qualdatan-plugins: die umbrella-pyproject unter
# `/repos/..` setzt sie als `{ workspace = true }` und wuerde durch
# konkurrierende path-deps hier erroren. Die Sibling-Repos sind unter
# `repos/core/` bzw. `repos/plugins/` erwartet; beim Ausspalten des
# Sidecars als Standalone-Paket (spaeter) werden hier path-deps
# ergaenzt (`qualdatan-core = { path = "../../core", editable = true }`).

[tool.setuptools.packages.find]
where = ["src"]
include = ["qualdatan_sidecar*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-q", "--strict-markers"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]
