[package]
name = "qualdatan-desktop"
version = "0.1.0"
edition = "2021"
description = "Qualdatan Desktop — Tauri shell for the Qualdatan qualitative analysis pipeline."
license = "AGPL-3.0-only"
authors = ["Qualdatan Contributors"]
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
